Going on small break - Bug Fixes

--- a/globals/css/json.css
+++ b/globals/css/json.css
@@ -10,7 +10,7 @@ pre {
     overflow: auto;
     height: fit-content;
     width: calc(100% - 20px);
-    max-width: calc(100% - 20px);;
+    max-width: calc(100% - 20px);
     margin-left: 5px;
     margin-right: 5px;
 }
